# CppAlgorithms

./: README.md
INSERTION-SORT/: CMakeLists.txt  main.cpp
INSERTION-SORT/src/: INSERTION_SORT.h
INSERTION-SORT/tests/: CMakeLists.txt  InsertionSortTests.cpp
INSERTION-SORT/tests_catch/: InsertionSortTests.cpp
LINEAR_SEARCH/: CMakeLists.txt  main.cpp
LINEAR_SEARCH/src/: LINEAR_SEARCH.h
LINEAR_SEARCH/tests/: LinearSearchTests.cpp
LINEAR_SEARCH/tests_catch/: CMakeLists.txt  LinearSearchTests.cpp
SELECTION_SORT/: CMakeLists.txt  main.cpp
SELECTION_SORT/src/: SELECTION_SORT.h
SELECTION_SORT/tests/: SelectionSortTests.cpp
SELECTION_SORT/tests_catch/: CMakeLists.txt  SelectionSortTests.cpp
